feat: salas y disponibilidad
